Fix QCOMPARE with enum classes.

As these are strongly typed, they won't implicitly convert to int, so make sure
to cast explicitly.

(cherry picked from commit 9626baaea98edc13236250fc4b92d461b80e3875, auto test
is not included)
Task-number: QTBUG-49597
Change-Id: I29c4331a9b0c61f2e60c2bcab5a99f65daa7060f
Reviewed-by: Olivier Goffart (Woboq GmbH) <ogoffart@woboq.com>

cregit: 4a4b17805c976b40a404b48ba51984c9abdba633 https://github.com/qt/qtbase/commit/4a4b17805c976b40a404b48ba51984c9abdba633